[gd_scene load_steps=13 format=3 uid="uid://doy1db8ily5kp"]

[ext_resource type="Script" path="res://scripts/moving_enemy.gd" id="1_l0yl8"]
[ext_resource type="Texture2D" uid="uid://c0ostvil8r4fm" path="res://assets/assetbeneran/enemy/Enemy_Move.png" id="2_q1bln"]
[ext_resource type="PackedScene" uid="uid://1kmdjxkrenbs" path="res://scenes/break_particle.tscn" id="3_mjjgh"]
[ext_resource type="Texture2D" uid="uid://4nebtjv3hal2" path="res://assets/circle-16.png" id="4_bvraa"]
[ext_resource type="AudioStream" uid="uid://b2ctgkfya0nam" path="res://assets/sfx/hitHurt.wav" id="5_x80m3"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pqw2h"]
radius = 94.5453
height = 395.984

[sub_resource type="AtlasTexture" id="AtlasTexture_jsrjs"]
atlas = ExtResource("2_q1bln")
region = Rect2(321, 0, 321, 177)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytvav"]
atlas = ExtResource("2_q1bln")
region = Rect2(0, 0, 321, 177)

[sub_resource type="SpriteFrames" id="SpriteFrames_8gl2d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsrjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytvav")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_iyoua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("collidingsfx:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("break_particle:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_v2p3w"]
resource_name = "destroy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [false, true]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("collidingsfx:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("break_particle:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0333333),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.0333333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vbyli"]
_data = {
"RESET": SubResource("Animation_iyoua"),
"destroy": SubResource("Animation_v2p3w")
}

[node name="moving_enemy" type="StaticBody2D"]
z_index = 1
position = Vector2(-1, 3)
collision_mask = 0
script = ExtResource("1_l0yl8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(108, -50)
rotation = -1.57274
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_pqw2h")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(110, -58)
scale = Vector2(0.757813, 0.757813)
sprite_frames = SubResource("SpriteFrames_8gl2d")
autoplay = "default"
frame_progress = 0.360307

[node name="RayCastright" type="RayCast2D" parent="."]
position = Vector2(108, -95)
scale = Vector2(0.5, 0.5)
target_position = Vector2(220, 0)

[node name="RayCastleft" type="RayCast2D" parent="."]
position = Vector2(108, -95)
scale = Vector2(0.5, 0.5)
target_position = Vector2(-228, 0)

[node name="killzone" type="Area2D" parent="."]
position = Vector2(19, -1)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="killzone"]
position = Vector2(89, -50)
rotation = -1.57274
scale = Vector2(0.55, 0.55)
shape = SubResource("CapsuleShape2D_pqw2h")

[node name="break_particle" parent="." instance=ExtResource("3_mjjgh")]
self_modulate = Color(1, 1, 1, 1)
position = Vector2(108, -51)
emitting = false
amount = 20
lifetime = 0.8
one_shot = true
speed_scale = 1.5
texture = ExtResource("4_bvraa")
initial_velocity_max = 350.0
scale_amount_min = 4.0
scale_amount_max = 6.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vbyli")
}

[node name="collidingsfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0.200001, 0.200001)
stream = ExtResource("5_x80m3")
volume_db = -2.0
pitch_scale = 1.3
max_distance = 1e+06

[connection signal="body_entered" from="killzone" to="." method="_on_killzone_body_entered"]
